css/style.css
/* Text Selection start */

::-moz-selection {
  /* Code for Firefox */
  color: black;
  background: yellow;
}

::selection {
  color: black;
  background: yellow;
}

mark {
  color: black;
  background-color: yellow;
}

mark:hover {
  color: black !important;
  background-color: yellow !important;
  cursor: pointer;
  -webkit-text-fill-color: black;
}

/* Text selection End */

/* Scroll Bar start */

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #6c63ff;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #000;
}

/* Scroll Bar End */

/* start navigation */

#top-nav-fixed {
  box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.1);
  background-color: white;
}

.header_area .main-menu .navbar {
  padding: 1rem 20rem;
}

.header_area .main-menu .nav-item .nav-link {
  font: normal 700 15px/2px var(--roboto);
  text-transform: uppercase;
  padding: 1.7rem;
  color: var(--title-color);
}

.header_area .main-menu .navbar-nav .active a {
  background: var(--gradient-color);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.header_area .main-menu .navbar-nav a:hover {
  background: var(--gradient-color);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  cursor: pointer;
}

/* end navigation */

/* Banner Area */

#subheading {
  color: #4458dc;
}

.social {
  font-size: 22px;
  padding: 0 0 10px 0;
  color: var(--border-color);
}

.social-link {
  padding: 10px;
}

.social:hover {
  color: var(--primary-color);
}

.site-main {
  margin-top: 80px;
}

.site-main .site-banner .site-title h3 {
  padding-top: 5%;
  font-weight: 500;
}

.site-main .site-banner .site-title h1 {
  font-size: 5rem;
}

.site-main .site-banner .site-title h4 {
  font-size: 1.5rem;
}

.site-main .site-banner .banner-image>img {
  padding: 0.5rem 0;
  width: 90rem;
}

.first-btn a {
  text-decoration: none;
  color: #fff;
}

.first-btn a:hover {
  text-decoration: none;
  color: #000;
}

.second-btn a {
  text-decoration: none;
  color: #000;
}

.second-btn a:hover {
  text-decoration: none;
  color: #fff;
}

.site-title p a {
  text-decoration: underline;
  cursor: pointer;
}

.button.secondary-button:hover a {
  color: whitesmoke;
}

.button.primary-button:hover a {
  color: black;
}

/* End Banner Area */

/* Start Experience Area */

.site-main .about-area {
  padding: 8rem 5rem;
}

.site-main .about-area .about-title h3>span {
  display: block;
  font: normal bold 49px/ 60px var(--roboto);
  letter-spacing: 21px;
}

.site-main .about-area .about-title .paragraph>p {
  padding: 0.4rem 0;
}

.exp>span {
  float: right;
  margin-right: 5vh;
  color: #4458dc;
}

.exp a,
i {
  cursor: pointer;
}

ul {
  list-style-type: square;
}

/* End Experience Area */

/* Start Technical Skills Area */
.shadow-sm {
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
}

.shadow {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
}

.shadow-lg {
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
}

.shadow-none {
  box-shadow: none !important;
}

.rounded-circle {
  border-radius: 50% !important;
}

.item {
  margin-bottom: 2rem;
}

.benefits-section .item .icon-holder {
  width: 60px;
  height: 60px;
  background: #f5f6fe;
  display: inline-block;
  border-radius: 50%;
  padding-top: 15px;
}

.benefits-section .item .icon-holder .svg-inline--fa {
  color: #4550e6;
  font-size: 1.75rem;
}

.benefits-section .item-inner {
  padding: 1.5rem;
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
  border: 1px solid #f5f6fe;
  height: 100%;
  background: #fff;
}

.how-section .icon-holder {
  text-align: center;
}

.how-section .icon-holder img {
  max-width: 200px;
  height: auto;
  position: relative;
}

.how-section .arrow-holder {
  content: "";
  width: 100%;
  height: 15px;
  background: url("../images/line-with-arrow.svg") no-repeat center center;
  background-size: 120px 15px;
  display: inline-block;
  position: absolute;
  right: -50%;
  top: 25%;
}

.step-count {
  border-radius: 50%;
  background: #f5f6fe;
  color: #4550e6;
  width: 36px;
  height: 36px;
  font-size: 1.25rem;
  padding-top: 0.3rem;
  display: inline-block;
  text-align: center;
}

.logos-section .item {
  -webkit-opacity: 0.4;
  -moz-opacity: 0.4;
  opacity: 0.4;
}

.logos-section .item img {
  width: 150px;
  height: auto;
}

.integration-list .item img {
  width: 100px;
  height: auto;
  background: white;
}

.skill-label {
  margin-left: 20px;
}

/* End Technical Skills Area */

/* Certificate Area */

.site-main .project-area {
  padding: 4rem 0;
}

.site-main .project-area .button-group button {
  background: transparent;
  border: none;
  font: normal 500 16px/130px var(--roboto);
  text-transform: uppercase;
}

.site-main .project-area .button-group button+button {
  padding-left: 3rem;
}

.site-main .project-area .grid .our-project>.title h4 {
      font: normal 700 25px/1.3 var(--roboto);
}

.site-main .project-area .grid .our-project .img a:hover img {
  filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
}

/* End Certificate Area */

/* About Me */

.site-main .about-area .about-title p {
  padding: 1rem 7rem;
}

.site-main .about-area .client {
  background: #ffffff10;
  box-shadow: var(--box-shadow);
  margin: 3rem 0rem;
}

.site-main .about-area .client .client-img {
  padding: 2rem;
}

.site-main .about-area .client .about-client {
  padding-top: 2rem;
}

.site-main .about-area .client .about-client h4 {
  font: normal 500 21px/ 20px var(--roboto);
}

.site-main .about-area .client .about-client p {
  font-size: 14px;
}

.site-main .about-area .owl-carousel .owl-item {
  display: flex;
  justify-content: center;
  padding: 0 1.5rem;
}

.transitioning-src {
  transition: opacity 0.4s ease-out;
  -webkit-transition: opacity 0.4s ease-out;
  -moz-transition: opacity 0.4s ease-out;
  -ms-transition: opacity 0.4s ease-out;
  -o-transition: opacity 0.4s ease-out;
  opacity: 0;
}

.para a {
  text-decoration: underline;
}

.site-main .about-area .owl-carousel .owl-dots .owl-dot.active span {
  background: var(--primary-color);
  width: 12px;
  height: 12px;
}

/* End About Me */
.faq-accordion .card-title {
  font-size: 1rem;
  font-weight: 500;
  position: relative;
}

.faq-accordion .card-title a {
  color: #252930;
}

.faq-accordion .card-title a:hover {
  text-decoration: none;
}

.faq-accordion .card-toggle .svg-inline--fa {
  position: absolute;
  right: 0;
  top: 0.15rem;
  font-size: 1rem;
  color: #888fef;
}

/* Footer Area */

footer.footer-area {
  padding: 5rem 0;
  background: url(../img/footer-bg.png) no-repeat;
}

footer.footer-area h5 {
  font: normal 500 23px/ 30px var(--roboto);
}

footer.footer-area .social a>i {
  font-size: 22px;
  padding: 2rem;
  color: var(--border-color);
}

footer.footer-area .social a:hover>i {
  color: var(--primary-color);
}

/* End Footer */
#scroll-btn {
  background-color: #4458dc;
  border: medium none;
  border-radius: 8px;
  bottom: 20px;
  color: white;
  cursor: pointer;
  display: none;
  outline: medium none;
  padding: 10px 15px 7px;
  position: fixed;
  right: 30px;
  z-index: 99;
  font-size: 20px;
}

/* Theme Slider CSS start here */

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 35px;
  width: 35px;
  left: 0px;
  bottom: 4px;
  top: 0;
  bottom: 0;
  margin: auto 0;
  -webkit-transition: 0.4s;
  transition: 0.4s;
  box-shadow: 0 0px 15px #2020203d;
  background: white url('https://i.ibb.co/FxzBYR9/night.png');
  background-repeat: no-repeat;
  background-position: center;
}

input:checked+.slider {
  background-color: #2196f3;
}

input:focus+.slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked+.slider:before {
  -webkit-transform: translateX(24px);
  -ms-transform: translateX(24px);
  transform: translateX(24px);
  background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
  background-repeat: no-repeat;
  background-position: center;
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* Resume Preview CSS */
.resume-div {
  margin-top: 7%;
  width: 100%;
  height: 100%;
}

.resume-btn {
  justify-content: space-evenly !important;
}

@media (min-width:320px) {
  .resume-div {
    margin-top: 30%;
  }
}

@media (min-width:481px) {
  .resume-div {
    margin-top: 22%;
  }
}

@media (min-width:641px) {
  .resume-div {
    margin-top: 20%;
  }
}

@media (min-width:730px) {
  .resume-div {
    margin-top: 15%;
  }
}

@media (min-width:1025px) {
  .resume-div {
    margin-top: 10%;
  }
}

@media (min-width:1281px) {
  .resume-div {
    margin-top: 8%;
  }
}


/* Theme Slider CSS end here */

/* Dark Theme ------------------------------------- */
.toggle {
  --size: 1.5rem;
  appearance: none;
  outline: none;
  cursor: pointer;
  width: var(--size);
  height: var(--size);
  box-shadow: inset calc(var(--size) * 0.33) calc(var(--size) * -0.25) 0;
  border-radius: 999px;
  color: #e6e6ff;
  transition: all 500ms;
  margin-top: 0.8rem;
}

.toggle:checked {
  --ray-size: calc(var(--size) * -0.4);
  --offset-orthogonal: calc(var(--size) * 0.65);
  --offset-diagonal: calc(var(--size) * 0.45);
  transform: scale(0.75);
  color: #fa0;
  box-shadow: inset 0 0 0 var(--size),
    calc(var(--offset-orthogonal) * -1) 0 0 var(--ray-size),
    var(--offset-orthogonal) 0 0 var(--ray-size),
    0 calc(var(--offset-orthogonal) * -1) 0 var(--ray-size),
    0 var(--offset-orthogonal) 0 var(--ray-size),
    calc(var(--offset-diagonal) * -1) calc(var(--offset-diagonal) * -1) 0 var(--ray-size),
    var(--offset-diagonal) var(--offset-diagonal) 0 var(--ray-size),
    calc(var(--offset-diagonal) * -1) var(--offset-diagonal) 0 var(--ray-size),
    var(--offset-diagonal) calc(var(--offset-diagonal) * -1) 0 var(--ray-size);
}

@media only screen and (min-width:991px) {
  .mobile-show {
    display: none;
  }
}

@media screen and (min-width: 0px) and (max-width: 991px) {
  .desktop-show {
    display: none;
  }
}

.dark .header_area .main-menu .navbar {
  background-color: #191a1d !important;
}

.dark .navbar-light .navbar-brand {
  color: rgb(252, 252, 252) !important;
}

.dark .header_area .main-menu .nav-item .nav-link {
  color: rgb(252, 252, 252);
}

.dark .site-main {
  background-color: #252930;
}

.dark .title-text {
  color: rgb(252, 252, 252);
}

.dark {
  color: rgb(252, 252, 252) !important;
}

.dark .bg-white {
  background-color: #191a1d !important;
}

.dark .theme-bg-light {
  background-color: #191a1d !important;
  color: rgb(252, 252, 252) !important;
}

.dark .faq-accordion .card-title a {
  color: #fff;
}

.dark .exp>span {
  color: #c1c9fc;
}

.dark .faq-accordion .card-toggle .svg-inline--fa {
  color: #eeefff;
}

.dark p.para {
  color: rgb(252, 252, 252);
}

.dark .footer-area {
  background: #000;
}

.dark .svg-inline--fa {
  color: rgb(197, 197, 197);
}

.dark .svg-inline--fa:hover {
  color: #fff;
}

.dark .site-main .project-area .button-group button+button {
  color: rgb(252, 252, 252);
}

.dark #subheading {
  color: #f4e964;
}

